<resources>
    <string name="app_name">ESkola</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="jmbg">EditTextJMBG</string>
    <string name="dodajte_novog_korisnika">Dodajte novog korisnika</string>
    <string name="administrator">Administrator</string>
    <string name="admin_eskola_edu_rs">admin@eskola.edu.rs</string>
    <string name="nalozi">Nalozi</string>
    <string name="informacije">Informacije</string>
    <string name="raspored_odeljenja">Raspored odeljenja</string>
    <string name="nastavnici">Nastavnici</string>
    <string name="razredni">Razredni</string>
    <string name="raspored_casova">Raspored casova</string>
    <string name="title_activity_nastavnik">NastavnikActivity</string>
    <string name="pregled_ucenika">Pregled Ucenika</string>
    <string name="pregled_otvorenih_vrata">Pregled Otvorenih Vrata</string>
    <string name="pregled_finansija">Pregled Finansija</string>
    <string name="obavestenja">Obavestenja</string>
    <string name="izostanci">Izostanci</string>
    <string name="ocene">Ocene</string>
    <string name="kontrolni">Kontrolni</string>
    <string name="izmena_plana_rada">Izmena Plana Rada</string>
    <string name="ocenjivanje">Ocenjivanje</string>
    <string name="title_activity_ocenjivanje">OcenjivanjeActivity</string>
    <string name="login">Login</string>
    <string name="eskola">eSkola</string>
    <string name="lozinka">Lozinka</string>
    <string name="korisnicko_ime">Korisnicko ime</string>
    <string name="title_activity_kontrolni">KontrolniActivity</string>
    <string name="title_activity_ocena">Ocena</string>
    <string name="title_activity_roditelj">Dobrodosla Mama !</string>
    <string name="title_activity_finansije">Finansije</string>
</resources>
